--- a/Day 17/lesson17/Register.html
+++ b/Day 17/lesson17/Register.html
@@ -22,10 +22,18 @@
     <input type="submit">
     <br>
     <br>
-    <label for="country" placeholder="enter country">country</label>
-    <input type="country">
-    <input type="submit">
-    
+    <form>
+        <label for="country" placeholder="enter country">country</label>
+           <input type="country"
+           <input type="submit">
+        <label for="cars">choose a country</label>
+       <select name="country" id="countrys">
+           <option valuc="Spain">spain</option>
+           <option value="Georgia" selected>Georgia</option>
+           <option value="Germany">Germany</option>
+           <option value="France">France</option>
+       </select>
+    </form>
     <br>
     <br>
     <label for="password" placeholder="enter password">password</label>
